--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     volumes:
       - ./data:/data
   rpi3:
-    image: tianon/raspbian:bullseye
-    platform: linux/arm/v6
-    container_name: rpi_b_1_2
+    image: balenalib/rpi-raspbian:latest
+    platform: linux/arm/v7
+    container_name: rpi_b_3
     tty: true
     stdin_open: true
     command: bash
